--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -5,7 +5,7 @@
     <nz-sider nzTheme="light" [nzWidth]="240">
       <wpx-nav></wpx-nav>
     </nz-sider>
-    <nz-layout>
+    <nz-layout style="overflow: auto">
       <wpx-page-header></wpx-page-header>
       <nz-content>
         <router-outlet></router-outlet>
