--- a/projects/ngx/lowcode/wpx-schema/wpx-schema.component.html
+++ b/projects/ngx/lowcode/wpx-schema/wpx-schema.component.html
@@ -10,22 +10,25 @@
 <wpx-schema-act #schemaAct (ok)="getSchemas()"></wpx-schema-act>
 <wpx-schema-field-act #fieldAct (ok)="getSchemas()"></wpx-schema-field-act>
 
-<nz-row [nzGutter]="12">
-  <nz-col [nzXXl]="6" [nzXl]="8" [nzLg]="12">
-    <nz-card>
-      <nz-space style="margin-bottom: 12px">
-        <nz-input-group *nzSpaceItem nzSuffixIcon="search">
-          <input type="text" nz-input placeholder="搜索" [(ngModel)]="name" />
-        </nz-input-group>
-        <nz-button-group *nzSpaceItem>
-          <button nz-button nz-tooltip="全部收起" (click)="layout.setExpanded(schemaTree.getTreeNodes(), false)">
-            <i nz-icon nzType="node-collapse"></i>
-          </button>
-          <button nz-button nz-tooltip="全部展开" (click)="layout.setExpanded(schemaTree.getTreeNodes(), true)">
-            <i nz-icon nzType="node-expand"></i>
-          </button>
-        </nz-button-group>
-      </nz-space>
+<ng-template #title>
+  <nz-space>
+    <nz-button-group *nzSpaceItem>
+      <button nz-button nz-tooltip="全部收起" (click)="layout.setExpanded(schemaTree.getTreeNodes(), false)">
+        <i nz-icon nzType="node-collapse"></i>
+      </button>
+      <button nz-button nz-tooltip="全部展开" (click)="layout.setExpanded(schemaTree.getTreeNodes(), true)">
+        <i nz-icon nzType="node-expand"></i>
+      </button>
+    </nz-button-group>
+    <nz-input-group *nzSpaceItem nzSuffixIcon="search">
+      <input type="text" style="width: 240px" nz-input placeholder="搜索" [(ngModel)]="name" />
+    </nz-input-group>
+  </nz-space>
+</ng-template>
+
+<nz-card [nzTitle]="title">
+  <nz-row [nzGutter]="12">
+    <nz-col [nzXXl]="4" [nzXl]="5" [nzLg]="6">
       <nz-tree
         #schemaTree
         nzBlockNode
@@ -68,76 +71,71 @@
           </ul>
         </nz-dropdown-menu>
       </nz-tree>
-    </nz-card>
-  </nz-col>
-  <nz-col [nzXXl]="18" [nzXl]="16" [nzLg]="12">
-    <nz-card *ngIf="!fieldAct.data; else content">
-      <nz-card-tab>
-        <nz-tabset nzSize="large" [(nzSelectedIndex)]="tabs">
+    </nz-col>
+    <nz-col [nzXXl]="20" [nzXl]="19" [nzLg]="18">
+      <ng-container *ngIf="!fieldAct.data; else content">
+        <nz-tabset nzType="card" [(nzSelectedIndex)]="tabs">
           <nz-tab nzTitle="自定义组件"></nz-tab>
           <nz-tab nzTitle="数据库集合" nzDisabled></nz-tab>
         </nz-tabset>
-      </nz-card-tab>
 
-      <ng-container [ngSwitch]="tabs">
-        <ng-container *ngSwitchCase="0">
-          <nz-table
-            #manualTable
-            [nzData]="manuals"
-            [nzFrontPagination]="false"
-            [nzShowPagination]="false"
-            [nzScroll]="{ x: '1200px' }"
-          >
-            <thead>
-              <tr>
-                <th nzWidth="65px"> </th>
-                <th nzWidth="240px"><b>集合命名</b></th>
-                <th nzWidth="240px"><b>显示名称</b></th>
-                <th><b>描述</b></th>
-                <th nzWidth="100px" nzRight="0px"><b>操作</b></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let data of manualTable.data">
-                <td>
-                  <ng-container *ngIf="!!data.system">
-                    <nz-tag nzColor="blue">SYS</nz-tag>
-                  </ng-container>
-                </td>
-                <td>{{ data.key }}</td>
-                <td>{{ data.label }}</td>
-                <td> - </td>
-                <td>
-                  <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="actions">
-                    <i nz-icon nzType="ellipsis"></i>
-                  </button>
-                  <nz-dropdown-menu #actions="nzDropdownMenu">
-                    <ul nz-menu>
-                      <li nz-menu-item> <i nz-icon nzType="setting"></i>&nbsp;设置 </li>
-                      <li nz-menu-item [nzDisabled]="!!data.system" (click)="schemaAct.delete(data)">
-                        <i nz-icon nzType="delete"></i>&nbsp;删除
-                      </li>
-                    </ul>
-                  </nz-dropdown-menu>
-                </td>
-              </tr>
-            </tbody>
-          </nz-table>
+        <ng-container [ngSwitch]="tabs">
+          <ng-container *ngSwitchCase="0">
+            <nz-table
+              style="width: 100%"
+              #manualTable
+              [nzData]="manuals"
+              [nzFrontPagination]="false"
+              [nzShowPagination]="false"
+              [nzScroll]="{ x: '1200px' }"
+            >
+              <thead>
+                <tr>
+                  <th nzWidth="65px"> </th>
+                  <th nzWidth="240px"><b>集合命名</b></th>
+                  <th nzWidth="240px"><b>显示名称</b></th>
+                  <th><b>描述</b></th>
+                  <th nzWidth="100px" nzRight="0px"><b>操作</b></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let data of manualTable.data">
+                  <td>
+                    <ng-container *ngIf="!!data.system">
+                      <nz-tag nzColor="blue">SYS</nz-tag>
+                    </ng-container>
+                  </td>
+                  <td>{{ data.key }}</td>
+                  <td>{{ data.label }}</td>
+                  <td> - </td>
+                  <td>
+                    <button nz-button nzType="text" nz-dropdown [nzDropdownMenu]="actions">
+                      <i nz-icon nzType="ellipsis"></i>
+                    </button>
+                    <nz-dropdown-menu #actions="nzDropdownMenu">
+                      <ul nz-menu>
+                        <li nz-menu-item> <i nz-icon nzType="setting"></i>&nbsp;设置 </li>
+                        <li nz-menu-item [nzDisabled]="!!data.system" (click)="schemaAct.delete(data)">
+                          <i nz-icon nzType="delete"></i>&nbsp;删除
+                        </li>
+                      </ul>
+                    </nz-dropdown-menu>
+                  </td>
+                </tr>
+              </tbody>
+            </nz-table>
+          </ng-container>
         </ng-container>
       </ng-container>
-    </nz-card>
-    <ng-template #content>
-      <nz-card>
-        <nz-card-tab>
-          <nz-tabset nzSize="large" [(nzSelectedIndex)]="tabs" [nzTabBarExtraContent]="contentTabExtra">
-            <ng-template #contentTabExtra>
-              <button nz-button nzType="text"><i nz-icon nzType="ellipsis"></i></button>
-            </ng-template>
-            <nz-tab nzTitle="内容类型"></nz-tab>
-            <nz-tab nzTitle="索引" nzDisabled> </nz-tab>
-          </nz-tabset>
-        </nz-card-tab>
 
+      <ng-template #content>
+        <nz-tabset nzType="card" [(nzSelectedIndex)]="tabs" [nzTabBarExtraContent]="contentTabExtra">
+          <ng-template #contentTabExtra>
+            <button nz-button nzType="text"><i nz-icon nzType="ellipsis"></i></button>
+          </ng-template>
+          <nz-tab nzTitle="内容类型"></nz-tab>
+          <nz-tab nzTitle="索引" nzDisabled> </nz-tab>
+        </nz-tabset>
         <ng-container [ngSwitch]="tabs">
           <ng-container *ngSwitchCase="0">
             <nz-table
@@ -224,7 +222,7 @@
             </nz-table>
           </ng-container>
         </ng-container>
-      </nz-card>
-    </ng-template>
-  </nz-col>
-</nz-row>
+      </ng-template>
+    </nz-col>
+  </nz-row>
+</nz-card>
