--- a/projects/ngx/lowcode/wpx-template/wpx-template-table/wpx-template-table.component.html
+++ b/projects/ngx/lowcode/wpx-template/wpx-template-table/wpx-template-table.component.html
@@ -5,38 +5,47 @@
 </wpx-layout>
 
 <ng-template #title>
-  <form
-    *ngIf="searchForm"
-    nzLayout="inline"
-    class="search"
-    nz-form
-    [formGroup]="searchForm"
-    (wpxFormSubmit)="submit($event)"
-  >
-    <ng-container *ngFor="let x of search">
-      <nz-form-item style="margin-bottom: 1em">
-        <nz-form-label>{{ x.label }}</nz-form-label>
-        <nz-form-control>
-          <nz-input-group nzCompact>
-            <nz-select style="width: 40%">
-              <nz-option [nzValue]="0" nzLabel="模糊"></nz-option>
-              <nz-option [nzValue]="1" nzLabel="精确"></nz-option>
-            </nz-select>
-            <input style="width: 60%" nz-input [formControlName]="x.key" />
-          </nz-input-group>
-        </nz-form-control>
-      </nz-form-item>
-    </ng-container>
+  <!--  <form-->
+  <!--    *ngIf="searchForm"-->
+  <!--    nzLayout="inline"-->
+  <!--    class="search"-->
+  <!--    nz-form-->
+  <!--    [formGroup]="searchForm"-->
+  <!--    (wpxFormSubmit)="submit($event)"-->
+  <!--  >-->
+  <!--    <ng-container *ngFor="let x of search">-->
+  <!--      <nz-form-item style="margin-bottom: 1em">-->
+  <!--        <nz-form-label>{{ x.label }}</nz-form-label>-->
+  <!--        <nz-form-control [formGroupName]="x.key">-->
+  <!--          <nz-input-group nzCompact>-->
+  <!--            <nz-select formControlName="operator" style="width: 40%">-->
+  <!--              <nz-option [nzValue]="'$regex'" nzLabel="模糊"></nz-option>-->
+  <!--              <nz-option [nzValue]="'$eq'" nzLabel="精确"></nz-option>-->
+  <!--            </nz-select>-->
+  <!--            <input style="width: 60%" nz-input formControlName="value" />-->
+  <!--          </nz-input-group>-->
+  <!--        </nz-form-control>-->
+  <!--      </nz-form-item>-->
+  <!--    </ng-container>-->
 
-    <nz-form-item *ngIf="!(search | wpxEmpty)">
-      <nz-form-control>
-        <nz-space>
-          <button *nzSpaceItem nz-button> <i nz-icon nzType="search"></i> 搜索 </button>
-          <button *nzSpaceItem nz-button type="reset"> <i nz-icon nzType="clear"></i> 重置 </button>
-        </nz-space>
-      </nz-form-control>
-    </nz-form-item>
-  </form>
+  <!--    <nz-form-item *ngIf="!(search | wpxEmpty)">-->
+  <!--      <nz-form-control>-->
+  <!--        <nz-space>-->
+  <!--          <button *nzSpaceItem nz-button> <i nz-icon nzType="search"></i> 搜索 </button>-->
+  <!--          <button *nzSpaceItem nz-button type="reset"> <i nz-icon nzType="clear"></i> 重置 </button>-->
+  <!--        </nz-space>-->
+  <!--      </nz-form-control>-->
+  <!--    </nz-form-item>-->
+  <!--  </form>-->
+  <nz-input-group nzCompact style="width: 600px">
+    <nz-select style="width: 20%">
+      <ng-container *ngFor="let x of fields">
+        <nz-option [nzLabel]="x.label" [nzValue]="x.key"></nz-option>
+      </ng-container>
+    </nz-select>
+    <input type="text" nz-input style="width: 50%" [placeholder]="'请输入'" />
+    <button nz-button nzSearch><i nz-icon nzType="search"></i></button>
+  </nz-input-group>
 </ng-template>
 
 <ng-template #actions>
@@ -44,14 +53,14 @@
     <button
       *nzSpaceItem
       nz-button
-      nzType="primary"
+      nzType="link"
       nz-popover
       nzPopoverPlacement="bottomRight"
       nzPopoverTrigger="click"
       nzPopoverTitle="设置检索条件"
       [nzPopoverContent]="searchPopover"
     >
-      <i nz-icon nzType="filter"></i> 检索
+      高级搜索
       <ng-template #searchPopover>
         <nz-checkbox-group [(ngModel)]="searchOptions" (ngModelChange)="updateSearch()"></nz-checkbox-group>
       </ng-template>
