--- a/projects/ngx/lowcode/wpx-template/wpx-template-table/wpx-template-table.component.html
+++ b/projects/ngx/lowcode/wpx-template/wpx-template-table/wpx-template-table.component.html
@@ -5,66 +5,27 @@
 </wpx-layout>
 
 <ng-template #title>
-  <!--  <form-->
-  <!--    *ngIf="searchForm"-->
-  <!--    nzLayout="inline"-->
-  <!--    class="search"-->
-  <!--    nz-form-->
-  <!--    [formGroup]="searchForm"-->
-  <!--    (wpxFormSubmit)="submit($event)"-->
-  <!--  >-->
-  <!--    <ng-container *ngFor="let x of search">-->
-  <!--      <nz-form-item style="margin-bottom: 1em">-->
-  <!--        <nz-form-label>{{ x.label }}</nz-form-label>-->
-  <!--        <nz-form-control [formGroupName]="x.key">-->
-  <!--          <nz-input-group nzCompact>-->
-  <!--            <nz-select formControlName="operator" style="width: 40%">-->
-  <!--              <nz-option [nzValue]="'$regex'" nzLabel="模糊"></nz-option>-->
-  <!--              <nz-option [nzValue]="'$eq'" nzLabel="精确"></nz-option>-->
-  <!--            </nz-select>-->
-  <!--            <input style="width: 60%" nz-input formControlName="value" />-->
-  <!--          </nz-input-group>-->
-  <!--        </nz-form-control>-->
-  <!--      </nz-form-item>-->
-  <!--    </ng-container>-->
-
-  <!--    <nz-form-item *ngIf="!(search | wpxEmpty)">-->
-  <!--      <nz-form-control>-->
-  <!--        <nz-space>-->
-  <!--          <button *nzSpaceItem nz-button> <i nz-icon nzType="search"></i> 搜索 </button>-->
-  <!--          <button *nzSpaceItem nz-button type="reset"> <i nz-icon nzType="clear"></i> 重置 </button>-->
-  <!--        </nz-space>-->
-  <!--      </nz-form-control>-->
-  <!--    </nz-form-item>-->
-  <!--  </form>-->
-  <nz-input-group nzCompact style="width: 600px">
-    <nz-select style="width: 20%">
-      <ng-container *ngFor="let x of fields">
+  <nz-input-group nzCompact>
+    <nz-select style="width: 120px" [(ngModel)]="searchQuick.field">
+      <ng-container *ngFor="let x of search">
         <nz-option [nzLabel]="x.label" [nzValue]="x.key"></nz-option>
       </ng-container>
     </nz-select>
-    <input type="text" nz-input style="width: 50%" [placeholder]="'请输入'" />
-    <button nz-button nzSearch><i nz-icon nzType="search"></i></button>
+    <input
+      (keyup.enter)="quickSearch()"
+      [(ngModel)]="searchQuick.value"
+      style="width: 240px"
+      type="text"
+      nz-input
+      [placeholder]="'快速搜索'"
+    />
+    <button (click)="quickSearch()" nz-button nzSearch><i nz-icon nzType="search"></i></button>
   </nz-input-group>
 </ng-template>
 
 <ng-template #actions>
   <nz-space>
-    <button
-      *nzSpaceItem
-      nz-button
-      nzType="link"
-      nz-popover
-      nzPopoverPlacement="bottomRight"
-      nzPopoverTrigger="click"
-      nzPopoverTitle="设置检索条件"
-      [nzPopoverContent]="searchPopover"
-    >
-      高级搜索
-      <ng-template #searchPopover>
-        <nz-checkbox-group [(ngModel)]="searchOptions" (ngModelChange)="updateSearch()"></nz-checkbox-group>
-      </ng-template>
-    </button>
+    <button *nzSpaceItem nz-button nzType="link" (click)="openSearchAdvanced()"> 高级搜索 </button>
     <nz-button-group *nzSpaceItem>
       <button nz-button nzType="text" nz-tooltip="刷新" (click)="refresh.emit()">
         <i nz-icon nzType="reload"></i>
@@ -117,6 +78,47 @@
   </nz-space>
 </ng-template>
 
+<nz-drawer
+  nzTitle="高级搜索"
+  [nzVisible]="searchAdvancedVisible"
+  [nzWidth]="420"
+  [nzFooter]="footerTpl"
+  [nzBodyStyle]="{ overflow: 'auto' }"
+  (nzOnClose)="closeSearchAdvanced()"
+>
+  <ng-container *nzDrawerContent>
+    <form
+      *ngIf="searchAdvancedForm"
+      [formGroup]="searchAdvancedForm"
+      nzLayout="vertical"
+      nz-form
+      (wpxFormSubmit)="submit($event)"
+    >
+      <ng-container *ngFor="let x of search">
+        <nz-form-item [formGroupName]="x.key">
+          <nz-form-label>{{ x.label }}</nz-form-label>
+          <nz-form-control>
+            <nz-input-group nzCompact>
+              <nz-select style="width: 120px" formControlName="operator">
+                <nz-option [nzLabel]="'精确'" [nzValue]="'Between'"></nz-option>
+                <nz-option [nzLabel]="'模糊'" [nzValue]="'Except'"></nz-option>
+              </nz-select>
+              <input style="width: 200px" nz-input formControlName="value" />
+            </nz-input-group>
+          </nz-form-control>
+        </nz-form-item>
+      </ng-container>
+    </form>
+  </ng-container>
+
+  <ng-template #footerTpl>
+    <nz-space>
+      <button *nzSpaceItem nz-button> <i nz-icon nzType="search"></i> 搜索 </button>
+      <button *nzSpaceItem nz-button type="reset"> <i nz-icon nzType="clear"></i> 重置 </button>
+    </nz-space>
+  </ng-template>
+</nz-drawer>
+
 <nz-card [nzTitle]="title" [nzExtra]="actions">
   <nz-table
     #basicTable
@@ -124,9 +126,9 @@
     [nzData]="lists.data"
     [nzLoading]="lists.loading"
     [nzScroll]="{ x: '1600px' }"
-    [nzTitle]="lists.checkedNumber ? footer : null"
+    [nzTitle]="lists.checkedNumber ? bulk : null"
   >
-    <ng-template #footer>
+    <ng-template #bulk>
       <nz-alert nzType="info" nzBanner [nzMessage]="message"></nz-alert>
       <ng-template #message>
         <nz-row nzJustify="space-between">
