--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
         <img src="/assets/logo.svg" alt="ng-zorro" />
       </div>
       <h1>打造一体化数据运营平台</h1>
-      <form [formGroup]="form" nz-form (bitFormSubmit)="submit($event)">
+      <form [formGroup]="form" nz-form (wpxFormSubmit)="submit($event)">
         <nz-form-item>
           <nz-form-control
             [nzAutoTips]="{
@@ -83,7 +83,7 @@
       <p nz-typography>
         <i nz-icon nzType="copyright"></i>
         <span> {{ now }} Developed by </span>
-        <a href="https://github.com/kainonly" target="_blank"> <b>KAIN </b> <i nz-icon nzType="github"></i></a>
+        <a href="https://github.com/weplanx" target="_blank"> <b>WEPLANX </b> <i nz-icon nzType="github"></i></a>
       </p>
     </footer>
   </div>
