--- a/projects/ngx/lowcode/wpx-template/wpx-template-table/wpx-template-table.component.html
+++ b/projects/ngx/lowcode/wpx-template/wpx-template-table/wpx-template-table.component.html
@@ -27,7 +27,7 @@
   <nz-space>
     <button *nzSpaceItem nz-button nzType="link" (click)="openSearchAdvanced()"> 高级搜索 </button>
     <nz-button-group *nzSpaceItem>
-      <button nz-button nzType="text" nz-tooltip="刷新" (click)="refresh.emit()">
+      <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData()">
         <i nz-icon nzType="reload"></i>
       </button>
       <button
