--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
         <img src="/assets/logo.svg" alt="ng-zorro" />
       </div>
       <h1>打造一体化数据运营平台</h1>
-      <form [formGroup]="form" nz-form (wpxFormSubmit)="submit($event)">
+      <form [formGroup]="form" nz-form (wpxSubmit)="submit($event)">
         <nz-form-item>
           <nz-form-control
             [nzAutoTips]="{
