--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -4,7 +4,92 @@
   </button>
 </wpx-layout>
 
-<nz-card>
+<ng-template #searchTpl>
+  <nz-row [nzGutter]="12">
+    <nz-col>
+      <nz-input-group nzCompact>
+        <nz-select style="width: 160px" [(ngModel)]="searchQuick.field" nzPlaceHolder="请选择查询字段" nzAllowClear>
+          <ng-container *ngFor="let x of search">
+            <nz-option [nzLabel]="x.label" [nzValue]="x.key"></nz-option>
+          </ng-container>
+        </nz-select>
+        <input
+          (keyup.enter)="quickSearch()"
+          [(ngModel)]="searchQuick.value"
+          style="width: 260px"
+          type="text"
+          nz-input
+          [placeholder]="'请输入查询关键词'"
+        />
+        <button (click)="quickSearch()" nz-button nzSearch><i nz-icon nzType="search"></i></button>
+      </nz-input-group>
+    </nz-col>
+    <nz-col>
+      <nz-button-group>
+        <button nz-button (click)="openSearchAdvanced()"> 高级搜索 </button>
+        <button nz-button nzType="dashed" nz-tooltip="重置搜索">
+          <i nz-icon nzType="clear"></i>
+        </button>
+      </nz-button-group>
+    </nz-col>
+  </nz-row>
+</ng-template>
+
+<ng-template #actions>
+  <nz-space>
+    <nz-button-group *nzSpaceItem>
+      <button nz-button nzType="text" nz-tooltip="刷新" (click)="getOrders(true)">
+        <i nz-icon nzType="reload"></i>
+      </button>
+      <button
+        nz-button
+        nzType="text"
+        nz-tooltip="密度"
+        nz-popover
+        nzPopoverPlacement="bottomRight"
+        nzPopoverTrigger="click"
+        nzPopoverTitle="设置密度"
+        [nzPopoverContent]="sizePopover"
+      >
+        <i nz-icon nzType="column-height"></i>
+        <ng-template #sizePopover>
+          <nz-radio-group>
+            <label nz-radio-button nzValue="default">默认</label>
+            <label nz-radio-button nzValue="middle">中等</label>
+            <label nz-radio-button nzValue="small">紧凑</label>
+          </nz-radio-group>
+        </ng-template>
+      </button>
+      <!--      <button-->
+      <!--        nz-button-->
+      <!--        nzType="text"-->
+      <!--        nz-tooltip="列设置"-->
+      <!--        nz-popover-->
+      <!--        nzPopoverPlacement="bottomRight"-->
+      <!--        nzPopoverTrigger="click"-->
+      <!--        [nzPopoverTitle]="fieldPopoverTitle"-->
+      <!--        [nzPopoverContent]="fieldPopoverContent"-->
+      <!--      >-->
+      <!--        <i nz-icon nzType="setting"></i>-->
+      <!--        <ng-template #fieldPopoverTitle>-->
+      <!--          <label-->
+      <!--            nz-checkbox-->
+      <!--            [(ngModel)]="columnsChecked"-->
+      <!--            (ngModelChange)="updateColumnsChecked()"-->
+      <!--            [nzIndeterminate]="columnsIndeterminate"-->
+      <!--          >-->
+      <!--            全部展示-->
+      <!--          </label>-->
+      <!--        </ng-template>-->
+      <!--        <ng-template #fieldPopoverContent>-->
+      <!--          <nz-checkbox-group [(ngModel)]="columns" (ngModelChange)="updateColumnChecked()"></nz-checkbox-group>-->
+      <!--        </ng-template>-->
+      <!--      </button>-->
+    </nz-button-group>
+  </nz-space>
+</ng-template>
+
+<nz-card [nzTitle]="searchTpl" [nzExtra]="actions">
   <nz-table
     #basicTable
     [nzData]="coll.data"
